<resources>
    <string name="app_name">Game Center Toni</string>
    <string name="title_game_text">Toni\'s Game Center</string>
    <string name="user_text">Username</string>
    <string name="sign_in_text">Sign In</string>
    <string name="password_text">Password</string>
    <string name="enter_username_text">Enter the username</string>
    <string name="enter_password_text">Enter the password</string>
    <string name="create_account_text">Do you have a user account? \n If you don\'t have an account, \n click on the text to create a new one</string>
    <string name="create_account_title">Create Account</string>
    <string name="personal_name">Name</string>
    <string name="enter_personal_name">Enter the personal name</string>
    <string name="personal_surnames">Surnames</string>
    <string name="enter_surnames">Enter the surnames</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_date_of_birth">Enter your date of birth</string>
    <string name="re_enter_password">Re-enter the password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="have_account_text">Do you already have an account created? \n If you have it, click on the text to go to the login screen</string>
    <string name="active_users_text">Active Users</string>
    <string name="breakout_title">BREAKOUT</string>
    <string name="global_statics">Global Statics</string>
    <string name="play_game">Play Game</string>
    <string name="title_game2048">2048</string>
    <string name="exit_game">Exit Game</string>

    <string name="new_game">New Game</string>
    <string name="message_win_text">You win the break out!</string>

    <string name="text_puntuation">Score: 0</string>
    <string name="name_title">2048</string>
    <string name="restart_game">Restart Game</string>
    <string name="previous_play">Previous Play</string>
    <string name="best_puntuation">Best: 0</string>
</resources>