<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/title_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_title"
        android:textColor="@color/white"
        android:textSize="20pt"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <ScrollView
        android:id="@+id/scroll_new_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_create_account"
        android:fillViewport="true"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:id="@+id/enter_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/title_personal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_name"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/enter_personal_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_personal_name"
                android:textColorHint="@color/black"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/background_edit_text"/>

            <TextView
                android:id="@+id/title_personal_surnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_surnames"
                android:textSize="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/enter_surnames"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_surnames"
                android:textColorHint="@color/black"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/background_edit_text"/>

            <TextView
                android:id="@+id/title_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textSize="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/enter_date_of_birth"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_date_of_birth"
                android:textColorHint="@color/black"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/background_edit_text"/>

            <TextView
                android:id="@+id/title_create_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_text"
                android:textSize="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/create_username"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_username_text"
                android:textColorHint="@color/black"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/background_edit_text"/>

            <TextView
                android:id="@+id/title_create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password_text"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/create_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_password_text"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/background_edit_text"/>

            <EditText
                android:id="@+id/enter_same_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/re_enter_password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/background_edit_text"/>

            <Button
                android:id="@+id/new_account_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/create_account_button_text"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/create_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/have_account_text"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>