<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/black">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textColor="@color/white"
        android:textSize="20pt"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/enter_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/sign_in"
        android:layout_marginTop="90dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/title_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_text"
            android:textSize="30dp"
            android:gravity="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/enter_username"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/enter_username_text"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:background="@drawable/background_edit_text"/>

        <TextView
            android:id="@+id/title_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password_text"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/enter_password_text"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:background="@drawable/background_edit_text"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="Sign In"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/grey"/>

        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>